[gd_scene load_steps=11 format=3 uid="uid://bbsqvqymrojj5"]

[ext_resource type="Script" uid="uid://2edsptc0xr5r" path="res://gamedata/scene/common/level.gd" id="1_8vq8d"]
[ext_resource type="PackedScene" uid="uid://cdb4s0kj5v3yf" path="res://gamedata/enemy/slime/slime.tscn" id="3_36ads"]
[ext_resource type="PackedScene" uid="uid://cmgfgbdj1o7aw" path="res://gamedata/enemy/ork/ork.tscn" id="3_72mh5"]
[ext_resource type="Texture2D" uid="uid://c17d2n1jjcd8t" path="res://gui/icons/menu.svg" id="3_qnfjt"]
[ext_resource type="PackedScene" uid="uid://ct70ofombeymi" path="res://gamedata/gui/defeat_menu/defeat_menu.tscn" id="5_tbcgi"]
[ext_resource type="PackedScene" uid="uid://bojk4803caaro" path="res://gamedata/gui/victory_menu/victory_menu.tscn" id="6_r8y5h"]
[ext_resource type="PackedScene" uid="uid://bwfjylls4graf" path="res://gamedata/gui/game_menu/game_menu.tscn" id="7_165x0"]
[ext_resource type="PackedScene" uid="uid://c7psph5vsrocc" path="res://gamedata/gui/player_stats/player_stats.tscn" id="8_otqld"]
[ext_resource type="PackedScene" uid="uid://dgsn2o3sm3wgn" path="res://gamedata/scene/common/holy_oak.tscn" id="9_eoj5e"]

[sub_resource type="GDScript" id="GDScript_1jmb8"]
script/source = "extends Node

@onready var menu_button: Button = $\"../GUI/MenuButton\"

func _input(_event: InputEvent) -> void:
	if Input.is_action_just_pressed(\"ui_cancel\") and not menu_button.disabled:
		menu_button.pressed.emit()
"

[node name="Level" type="Node2D"]
script = ExtResource("1_8vq8d")
ork_scene = ExtResource("3_72mh5")
slime_scene = ExtResource("3_36ads")
defeat_menu_scene = ExtResource("5_tbcgi")
victory_menu_scene = ExtResource("6_r8y5h")
game_menu_scene = ExtResource("7_165x0")

[node name="Tilemap" type="Node2D" parent="."]
texture_filter = 1

[node name="Enemies" type="Node2D" parent="."]
editor_description = "When you create a new Path2D, you have to name it \"Road N\" (N is the number of the road in LevelData that contains waves)
e.g. Road 1
e.g. Road 2
and etc"

[node name="Map" type="Node2D" parent="."]
texture_filter = 1

[node name="Holy Oak" parent="Map" instance=ExtResource("9_eoj5e")]

[node name="Towers" type="Node2D" parent="."]

[node name="ShellContainer" type="Node2D" parent="."]

[node name="PlayerStats" parent="." instance=ExtResource("8_otqld")]

[node name="GUI" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="MenuButton" type="Button" parent="GUI"]
layout_mode = 0
offset_left = 1207.0
offset_top = 16.0
offset_right = 1264.0
offset_bottom = 73.0
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(57, 0)
icon = ExtResource("3_qnfjt")
expand_icon = true

[node name="Timers" type="Node" parent="."]

[node name="Start Timer" type="Timer" parent="Timers"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Wave Timer" type="Timer" parent="Timers"]
wait_time = 5.0
one_shot = true

[node name="Spawn Timer" type="Timer" parent="Timers"]
one_shot = true

[node name="Control" type="Node" parent="."]
process_mode = 3
script = SubResource("GDScript_1jmb8")

[connection signal="pressed" from="GUI/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="timeout" from="Timers/Start Timer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="Timers/Wave Timer" to="." method="_on_wave_timer_timeout"]
